# kernel-POCs

./: .gitignore  README.md  geglu_activation_a100_bf16.csv  geglu_activation_smoke_bf16.csv  geglu_gateup_a100_bf16.csv  pyproject.toml  requirements.txt
context/: FORGE_CONTEXT.md  forge_functionality_matrix.xlsx  phase3_fsdp2_resume.md
docs/: README.md  geglu.md  geglu_brief.md  hackathon_day1_audit.md  layernorm.md  rmsnorm.md  swiglu.md  swiglu_brief.md
forge/: pyproject.toml
forge/benchmarks/: bench_qwen_provider.py
forge/demos/: pirate_dataset.py  plot_artifacts.py  plot_artifacts_qwen.py  run_inference.py  run_inference_qwen.py  train_lora_gemma_forge.py  train_lora_qwen_forge.py
forge/forge/: __init__.py
forge/forge/kernels/: __init__.py  cross_entropy.py  embedding.py  geglu.py  layernorm.py  lora_mlp.py  lora_qkv.py  rmsnorm.py  rope.py  swiglu.py
forge/forge/patching/: __init__.py  core.py  gemma.py  losses.py  qwen3.py
forge/forge/patching/kernels/: __init__.py  basic.py  common.py  cross_entropy.py  fused_linear_ce.py  lora.py
forge/tests/: test_embedding_padding_idx.py  test_lora_convergence.py  test_lora_mlp.py  test_lora_qkv.py  train_lora_qwen_patch.py  verify_convergence_gemma.py  verify_fsdp2_all_kernels_gemma.py  verify_fsdp2_depth_gemma.py  verify_fsdp2_lora_gemma.py  verify_fsdp2_lora_qwen.py  verify_fsdp2_scale_gemma.py  verify_lora_qwen_patch.py  verify_patch_gemma.py  verify_patch_lora_gemma.py  verify_patch_qwen3.py  verify_qwen_patch_backward.py
kernels/: __init__.py
results/: swiglu_a100_bf16.csv  swiglu_smoke.csv  (+2 more)
(+244 files in other folders)
