[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kerna-pocs"
version = "0.1.0"
description = "Proof-of-concept Triton kernels for Forge"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "transformers>=4.40.0",
    "peft>=0.11.0",
    "datasets>=2.19.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
