[project]
name = "kernel-pocs"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "liger-kernel>=0.8.0",
    "numpy>=1.26,<2",
    "setuptools>=42",
    "torch>=2.4,<2.5",
    "triton>=3.0,<3.1",
]

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: larger GPU correctness cases that are useful before benchmarking",
]
