[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.0.1.dev1"
description = "Custom Triton kernels for HuggingFace LLM fine-tuning. Meesho Forge hackathon scaffold."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "transformers>=4.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]
